--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,40 @@
+# Environment and config files
 .env
-gamedetails_service.js
-/node_modules
-frontend/node_modules
-backend/node_modules
-/frontend/build
-/backend/build
-/frontend/.cache
-/backend/.cache
-/.pnp
-.pnp.js
-/coverage
-/build
-
-.DS_Store
-*.log
 *.env.local
 *.env.development.local
 *.env.test.local
 *.env.production.local
 
+# Node stuff (ignore node_modules everywhere)
+node_modules/
+frontend/node_modules/
+backend/node_modules/
+
+# Build output
+build/
+frontend/build/
+backend/build/
+
+# Cache directories
+.cache/
+frontend/.cache/
+backend/.cache/
+
+# Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# OS files
+.DS_Store
+
+# Coverage reports
+coverage/
+
+# Yarn Plug'n'Play
+.pnp/
+.pnp.js
+
+# Specific files to ignore
+backend/gamedetails_service.js
